Fixes spacing issue on uri click to sign

--- a/src/sass/includes/_main.scss
+++ b/src/sass/includes/_main.scss
@@ -2157,6 +2157,6 @@ select option:empty { display:none }
 [class*=" fi-"] {
   line-height: 1 }
   
-.preferences-sign, .preferencesVerify {
+.preferences-sign, .preferencesVerify, .payment-uri {
   margin-top: 30px
 }
